# iar_project_template

./: .gitignore  CMakeLists.txt  README.md  iar-toolchain.cmake  meson.build
8051/mix-c-asm/: CMakeLists.txt
CC2530DB_CONFIG/: Readme.md  f8w2530.xcl  f8wCoord.cfg  f8wEndev.cfg  f8wRouter.cfg
Z-Stack-template/: CMakeLists.txt
Z-Stack-template/Source/: OSAL_GenericApp.c  zcl_genericapp.c  zcl_genericapp.h
hello-world/: CMakeLists.txt  main.c
template/: CMakeLists.txt  main.c  meson.build
